// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceSelector should render devices with custom device details 1`] = `
<span
  title="Select device (Alt+P)"
>
  <div
    className="core-padded-row"
  >
    <Dropdown
      id="device-selector"
      onToggle={[Function]}
      open={true}
    >
      <DropdownToggle
        className="core-device-selector core-btn btn-primary"
        title="Select device"
      />
      <DropdownMenu
        className="core-dropdown-menu"
        id="device-selector-list"
      >
        <MenuItem
          className="core-device-selector-item btn-primary"
          eventKey="usb-1-1"
          onSelect={[Function]}
        >
          <div>
            123456
          </div>
          <div
            className="core-device-selector-item-details"
          >
            SEGGER
          </div>
        </MenuItem>
        <MenuItem
          className="core-device-selector-item btn-primary"
          eventKey="usb-1-2"
          onSelect={[Function]}
        >
          <div>
            456789
          </div>
          <div
            className="core-device-selector-item-details"
          >
            Nordic Semiconductor
          </div>
        </MenuItem>
      </DropdownMenu>
    </Dropdown>
  </div>
</span>
`;

exports[`DeviceSelector should render devices with custom filter 1`] = `
<span
  title="Select device (Alt+P)"
>
  <div
    className="core-padded-row"
  >
    <Dropdown
      id="device-selector"
      onToggle={[Function]}
      open={true}
    >
      <DropdownToggle
        className="core-device-selector core-btn btn-primary"
        title="Select device"
      />
      <DropdownMenu
        className="core-dropdown-menu"
        id="device-selector-list"
      >
        <MenuItem
          className="core-device-selector-item btn-primary"
          eventKey="usb-1-1"
          onSelect={[Function]}
        >
          <div>
            123456
          </div>
          <div
            className="core-device-selector-item-details"
          >
            /dev/tty0
          </div>
        </MenuItem>
      </DropdownMenu>
    </Dropdown>
  </div>
</span>
`;

exports[`DeviceSelector should render empty device list, expanded 1`] = `
<span
  title="Select device (Alt+P)"
>
  <div
    className="core-padded-row"
  >
    <Dropdown
      id="device-selector"
      onToggle={[Function]}
      open={true}
    >
      <DropdownToggle
        className="core-device-selector core-btn btn-primary"
        title="Select device"
      />
      <DropdownMenu
        className="core-dropdown-menu"
        id="device-selector-list"
      />
    </Dropdown>
  </div>
</span>
`;

exports[`DeviceSelector should render empty device list, not expanded 1`] = `
<span
  title="Select device (Alt+P)"
>
  <div
    className="core-padded-row"
  >
    <Dropdown
      id="device-selector"
      onToggle={[Function]}
      open={false}
    >
      <DropdownToggle
        className="core-device-selector core-btn btn-primary"
        title="Select device"
      />
      <DropdownMenu
        className="core-dropdown-menu"
        id="device-selector-list"
      />
    </Dropdown>
  </div>
</span>
`;

exports[`DeviceSelector should render empty list while loading 1`] = `
<span
  title="Select device (Alt+P)"
>
  <div
    className="core-padded-row"
  >
    <Dropdown
      id="device-selector"
      onToggle={[Function]}
      open={true}
    >
      <DropdownToggle
        className="core-device-selector core-btn btn-primary"
        title="Select device"
      />
      <DropdownMenu
        className="core-dropdown-menu"
        id="device-selector-list"
      />
    </Dropdown>
  </div>
</span>
`;

exports[`DeviceSelector should render empty list while loading and device is selected 1`] = `
<span
  title="Select device (Alt+P)"
>
  <div
    className="core-padded-row"
  >
    <Dropdown
      id="device-selector"
      onToggle={[Function]}
      open={true}
    >
      <DropdownToggle
        className="core-device-selector core-btn btn-primary"
        title="123456"
      />
      <DropdownMenu
        className="core-dropdown-menu"
        id="device-selector-list"
      />
    </Dropdown>
  </div>
</span>
`;

exports[`DeviceSelector should render only Nordic Semiconductor and Segger devices by default 1`] = `
<span
  title="Select device (Alt+P)"
>
  <div
    className="core-padded-row"
  >
    <Dropdown
      id="device-selector"
      onToggle={[Function]}
      open={true}
    >
      <DropdownToggle
        className="core-device-selector core-btn btn-primary"
        title="Select device"
      />
      <DropdownMenu
        className="core-dropdown-menu"
        id="device-selector-list"
      >
        <MenuItem
          className="core-device-selector-item btn-primary"
          eventKey="usb-1-1"
          onSelect={[Function]}
        >
          <div>
            123456
          </div>
          <div
            className="core-device-selector-item-details"
          >
            /dev/tty0
          </div>
        </MenuItem>
        <MenuItem
          className="core-device-selector-item btn-primary"
          eventKey="usb-1-2"
          onSelect={[Function]}
        >
          <div>
            456789
          </div>
          <div
            className="core-device-selector-item-details"
          >
            /dev/tty1
          </div>
        </MenuItem>
      </DropdownMenu>
    </Dropdown>
  </div>
</span>
`;

exports[`DeviceSelector should render only devices that have a serial number by default 1`] = `
<span
  title="Select device (Alt+P)"
>
  <div
    className="core-padded-row"
  >
    <Dropdown
      id="device-selector"
      onToggle={[Function]}
      open={true}
    >
      <DropdownToggle
        className="core-device-selector core-btn btn-primary"
        title="Select device"
      />
      <DropdownMenu
        className="core-dropdown-menu"
        id="device-selector-list"
      >
        <MenuItem
          className="core-device-selector-item btn-primary"
          eventKey="usb-1-1"
          onSelect={[Function]}
        >
          <div>
            123456
          </div>
          <div
            className="core-device-selector-item-details"
          >
            /dev/tty0
          </div>
        </MenuItem>
      </DropdownMenu>
    </Dropdown>
  </div>
</span>
`;

exports[`DeviceSelector should render two devices 1`] = `
<span
  title="Select device (Alt+P)"
>
  <div
    className="core-padded-row"
  >
    <Dropdown
      id="device-selector"
      onToggle={[Function]}
      open={true}
    >
      <DropdownToggle
        className="core-device-selector core-btn btn-primary"
        title="Select device"
      />
      <DropdownMenu
        className="core-dropdown-menu"
        id="device-selector-list"
      >
        <MenuItem
          className="core-device-selector-item btn-primary"
          eventKey="usb-1-1"
          onSelect={[Function]}
        >
          <div>
            123456
          </div>
          <div
            className="core-device-selector-item-details"
          >
            /dev/tty0
          </div>
        </MenuItem>
        <MenuItem
          className="core-device-selector-item btn-primary"
          eventKey="usb-1-2"
          onSelect={[Function]}
        >
          <div>
            456789
          </div>
          <div
            className="core-device-selector-item-details"
          >
            /dev/tty1
          </div>
        </MenuItem>
      </DropdownMenu>
    </Dropdown>
  </div>
</span>
`;

exports[`DeviceSelector should render two devices, one selected 1`] = `
<span
  title="Select device (Alt+P)"
>
  <div
    className="core-padded-row"
  >
    <Dropdown
      id="device-selector"
      onToggle={[Function]}
      open={true}
    >
      <DropdownToggle
        className="core-device-selector core-btn btn-primary"
        title="456789"
      />
      <DropdownMenu
        className="core-dropdown-menu"
        id="device-selector-list"
      >
        <MenuItem
          className="core-device-selector-item btn-primary"
          eventKey="usb-1-1"
          onSelect={[Function]}
        >
          <div>
            123456
          </div>
          <div
            className="core-device-selector-item-details"
          >
            /dev/tty0
          </div>
        </MenuItem>
        <MenuItem
          className="core-device-selector-item btn-primary"
          eventKey="usb-1-2"
          onSelect={[Function]}
        >
          <div>
            456789
          </div>
          <div
            className="core-device-selector-item-details"
          >
            /dev/tty1
          </div>
        </MenuItem>
        <MenuItem
          className="core-device-selector-item btn-primary"
          eventKey="Close device"
          onSelect={[Function]}
        >
          <div>
            Close device
          </div>
        </MenuItem>
      </DropdownMenu>
    </Dropdown>
  </div>
</span>
`;
